src/main/java/semantic/abstractSintaxTree/test/failing/methodCallInsideStaticMethod.ru
/? InvalidAccessInStaticContextException
struct A {pri Int a1;}
impl A{
.(){}

    st fn m1()->void{
    Int a1;
        (a1);
        (m2());
    }

    fn m2() -> void{}


}

start {}